Updating TERM settings

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,10 +2,10 @@
 new-session
 
 #Set zsh
-#set-option -g default-command "reattach-to-user-namespace -l zsh"
+set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 #Set xterm
-set -g default-terminal "xterm"
+set -g default-terminal "screen-256color"
 setw -g utf8 on
 set -g status-utf8 on
 
