--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -37,7 +37,7 @@ setw -g mode-keys vi
 
 # Setup 'v' to begin selection as in Vim
 bind-key -t vi-copy v begin-selection
-#bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Update default binding of `Enter` to also use copy-pipe
 unbind -t vi-copy Enter
@@ -78,14 +78,35 @@ bind k select-pane -U
 unbind l
 bind l select-pane -R
 
-# status bar
-set -g status-bg black
+# -------------
+# status line
+# -------------
+set -g status-utf8 on
+set -g status-justify left
+#set -g status-bg black
+set -g status-bg colour234
 set -g status-fg white
-set -g status-interval 1
-set -g status-right-length 60
-set -g renumber-windows on
-set -g status-left ' '
-set -g status-right '#(battery-life) (#(battery-time)) #[fg=yellow]%Y-%m-%d %H:%M#[default] '
-set-window-option -g window-status-current-bg yellow
-set-window-option -g window-status-current-fg black
+set -g status-interval 4
 
+# -------------
+# window status
+# -------------
+setw -g window-status-format "#[fg=black]#[bg=colour7] #I #[fg=black]#[bg=colour15] #W "
+setw -g window-status-current-format "#[fg=colour8]#[bg=white] #I #[bg=colour69]#[fg=white] #W "
+setw -g window-status-current-bg black
+setw -g window-status-current-fg yellow
+setw -g window-status-current-attr bold
+setw -g window-status-bg black
+setw -g window-status-fg blue
+setw -g window-status-attr default
+setw -g window-status-content-bg black
+setw -g window-status-content-fg blue
+setw -g window-status-content-attr bold
+
+# -------------
+# Info on left (no session display)
+# -------------
+set -g status-left ''
+set -g status-right-length 150
+set -g status-right " #[fg=colour160] ♥ #[fg=colour69]#(bash ~/.tmux_scripts/battery.sh) | #(ifconfig | grep 192 | cut -d ' ' -f 2) | %H:%M "
+set -g status-utf8 on# status bar
