--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -83,23 +83,21 @@ bind l select-pane -R
 # -------------
 set -g status-utf8 on
 set -g status-justify left
-#set -g status-bg black
-set -g status-bg colour234
+set -g status-bg colour236
 set -g status-fg white
 set -g status-interval 4
 
 # -------------
 # window status
-# -------------
-setw -g window-status-format "#[fg=black]#[bg=colour7] #I #[fg=black]#[bg=colour15] #W "
-setw -g window-status-current-format "#[fg=colour8]#[bg=white] #I #[bg=colour69]#[fg=white] #W "
-setw -g window-status-current-bg black
-setw -g window-status-current-fg yellow
+setw -g window-status-format "#[fg=colour236]#[bg=colour7] #I #[fg=colour236]#[bg=colour15] #W "
+setw -g window-status-current-format "#[fg=colour8]#[bg=white] #I #[bg=colour110]#[fg=white] #W "
+setw -g window-status-current-bg colour236
+setw -g window-status-current-fg white
 setw -g window-status-current-attr bold
-setw -g window-status-bg black
+setw -g window-status-bg colour236
 setw -g window-status-fg blue
 setw -g window-status-attr default
-setw -g window-status-content-bg black
+setw -g window-status-content-bg colour236
 setw -g window-status-content-fg blue
 setw -g window-status-content-attr bold
 
@@ -108,5 +106,5 @@ setw -g window-status-content-attr bold
 # -------------
 set -g status-left ''
 set -g status-right-length 150
-set -g status-right " #[fg=colour160] ♥ #[fg=colour69]#(bash ~/.tmux_scripts/battery.sh) | #(ifconfig | grep 192 | cut -d ' ' -f 2) | %H:%M "
+set -g status-right " #[fg=colour168] ♥ #[fg=colour110]#(bash ~/.tmux_scripts/battery.sh) | #(ifconfig | grep 192 | cut -d ' ' -f 2) | %H:%M "
 set -g status-utf8 on# status bar
