--- a/tig/.tigrc
+++ b/tig/.tigrc
@@ -7,6 +7,7 @@ set main-view-date-display = relative
 
 #Bindings
 bind main B !git rebase -i %(commit)
+bind main R !git reset --soft %(commit)
 bind main ! !git revert %(commit)
 bind generic + !git commit --amend
 bind stash D !?git stash drop %(stash)
