Add nvim config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -105,3 +105,7 @@ set -g status-left ''
 set -g status-right-length 150
 set -g status-right " #[fg=colour168] ♥ #[fg=colour110]#(bash ~/.tmux_scripts/battery.sh) | #(ifconfig | grep 192 | cut -d ' ' -f 2) | %H:%M "
 set -g status-utf8 on# status bar
+
+# For quicker esc response in neovim
+set-option -s escape-time 10
+
