Update tmux status bar to include pomodoro timer

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -103,7 +103,8 @@ setw -g window-status-attr default
 # -------------
 set -g status-left ''
 set -g status-right-length 150
-set -g status-right " #[fg=colour168] ♥ #[fg=colour110]#(bash ~/.tmux_scripts/battery.sh) | #(ifconfig | grep 192 | cut -d ' ' -f 2) | %H:%M "
+set -g clock-mode-style 12
+set -g status-right " #[fg=colour168] ♥ #[fg=colour110]#(bash ~/.tmux_scripts/battery.sh) | #(cat ~/.pomo.txt.tmux) | %I:%M%P "
 set -g status-utf8 on# status bar
 
 # For quicker esc response in neovim
